--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Vinilos App</string>
     <string name="collector">Coleccionista</string>
     <string name="visitor">Visitante</string>
+    <string name="albums_title">Albums</string>
 </resources>
